crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_literal_float.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 231
expression: "format_with_errors(\"RETURN 3.14\")"
---
SOURCE_FILE@0..11
  STATEMENT@0..11
    RETURN_CLAUSE@0..11
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..11
        RETURN_ITEMS@6..11
          RETURN_ITEM@6..11
            LITERAL_EXPR@6..11
              WHITESPACE@6..7 " "
              FLOAT_LITERAL@7..11 "3.14"
