crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_literal_null.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 246
expression: "format_with_errors(\"RETURN NULL\")"
---
SOURCE_FILE@0..11
  STATEMENT@0..11
    RETURN_CLAUSE@0..11
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..11
        RETURN_ITEMS@6..11
          RETURN_ITEM@6..11
            LITERAL_EXPR@6..11
              WHITESPACE@6..7 " "
              NULL_KW@7..11 "NULL"
