crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_literal_string.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 236
expression: "format_with_errors(\"RETURN 'hello'\")"
---
SOURCE_FILE@0..14
  STATEMENT@0..14
    RETURN_CLAUSE@0..14
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..14
        RETURN_ITEMS@6..14
          RETURN_ITEM@6..14
            LITERAL_EXPR@6..14
              WHITESPACE@6..7 " "
              STRING_LITERAL@7..14 "'hello'"
