crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_map_literal_basic.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN {a: 1, b: 'two'}\")"
---
SOURCE_FILE@0..23
  STATEMENT@0..23
    RETURN_CLAUSE@0..23
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..23
        RETURN_ITEMS@6..23
          RETURN_ITEM@6..23
            MAP_LITERAL@6..23
              WHITESPACE@6..7 " "
              L_BRACE@7..8 "{"
              IDENT@8..9 "a"
              COLON@9..10 ":"
              LITERAL_EXPR@10..12
                WHITESPACE@10..11 " "
                INT_LITERAL@11..12 "1"
              COMMA@12..13 ","
              WHITESPACE@13..14 " "
              IDENT@14..15 "b"
              COLON@15..16 ":"
              LITERAL_EXPR@16..22
                WHITESPACE@16..17 " "
                STRING_LITERAL@17..22 "'two'"
              R_BRACE@22..23 "}"
