crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_map_literal_remains_literal_without_subject.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN { a: 1, b: 2 }\")"
---
SOURCE_FILE@0..21
  STATEMENT@0..21
    RETURN_CLAUSE@0..21
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..21
        RETURN_ITEMS@6..21
          RETURN_ITEM@6..21
            MAP_LITERAL@6..21
              WHITESPACE@6..7 " "
              L_BRACE@7..8 "{"
              WHITESPACE@8..9 " "
              IDENT@9..10 "a"
              COLON@10..11 ":"
              LITERAL_EXPR@11..13
                WHITESPACE@11..12 " "
                INT_LITERAL@12..13 "1"
              COMMA@13..14 ","
              WHITESPACE@14..15 " "
              IDENT@15..16 "b"
              COLON@16..17 ":"
              LITERAL_EXPR@17..19
                WHITESPACE@17..18 " "
                INT_LITERAL@18..19 "2"
              WHITESPACE@19..20 " "
              R_BRACE@20..21 "}"
