crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_map_projection_empty.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) RETURN n { }\")"
---
SOURCE_FILE@0..22
  STATEMENT@0..22
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    RETURN_CLAUSE@9..22
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..22
        RETURN_ITEMS@16..22
          RETURN_ITEM@16..22
            MAP_PROJECTION@16..22
              VAR_EXPR@16..18
                WHITESPACE@16..17 " "
                IDENT@17..18 "n"
              WHITESPACE@18..19 " "
              L_BRACE@19..20 "{"
              WHITESPACE@20..21 " "
              R_BRACE@21..22 "}"
